# aishield

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  preserve_custom.json  pyproject.toml  requirements.txt
aishield/: __init__.py  base.py  cli.py  mapping.json  minify.py  test_runner.py  unminify.py
aishield/languages/: __init__.py
aishield/languages/csharp/: adapter.py  preserve_language.json
aishield/languages/javascript/: adapter.py  keywords_javascript.json  preserve_language.json
tests/: QUICK_START.md  README.md
tests/typescript/: test1_basic.ts  test2_classes.ts  test3_async.ts  test4_react.tsx  test5_advanced.ts
