[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-defender"
version = "1.1.4"
description = "Intelligent code obfuscator to protect your code from AI-based analysis and reverse engineering"
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
authors = [
    {name = "AIShield Contributors"}
]
keywords = [
    "obfuscation",
    "code-protection",
    "ai-detection",
    "code-security",
    "reverse-engineering"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]

dependencies = [
    "pyperclip>=1.8.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-c-sharp>=0.23.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950"
]

[project.urls]
Homepage = "https://github.com/webinadvance/aishield"
Documentation = "https://github.com/webinadvance/aishield#readme"
Repository = "https://github.com/webinadvance/aishield.git"
"Bug Tracker" = "https://github.com/webinadvance/aishield/issues"

[project.scripts]
code-defender = "aishield.cli:main"

[tool.setuptools]
packages = ["aishield", "aishield.languages", "aishield.languages.javascript", "aishield.languages.csharp"]
include-package-data = true

[tool.setuptools.package-data]
aishield = ["**/*"]
